[AS2-5]: Fixed some alignment issues for rignet section

--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -29,7 +29,7 @@
       margin-bottom: 1.2rem;
     }
     @include for-media($laptop) {
-      max-width: 18.5rem;
+      max-width: 17.5rem;
       margin-bottom: 1.2rem;
     }
     @include for-media($desktop) {
@@ -48,30 +48,22 @@
       min-height: 10.5rem;
     }
   }
-  &:nth-child(odd) {
-    @include for-media($tablet) {
-      margin-right: 0.4rem;
-    }
-    @include for-media($desktop) {
-      margin-right: 1.4rem;
-    }
-  }
   @include for-media($tablet) {
-    margin: 0 0 0 0.2rem;
+    margin: 0;
     max-width: 34.8rem;
     display: inline-block;
     box-sizing: border-box;
-    padding: 2.5rem 2.5rem 2.6rem;
+    padding: 2.5rem 2.5rem 2.4rem;
   }
   @include for-media($laptop) {
     max-width: 46.4rem;
-    margin: 1rem 0 0 0.4rem;
-    padding: 3.5rem 3.5rem 5.8rem;
+    margin-top: 1rem;
+    padding: 3.5rem 3.5rem 6rem;
   }
   @include for-media($desktop) {
     max-width: 59.3rem;
-    padding: 6rem 4rem 3.2rem;
-    margin: 1.8rem 0 0.6rem;
+    padding: 6rem 4rem 3.8rem;
+    margin-top: 2rem;
   }
 }
 .growth-card {
